--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,10 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/api-pack": "^1.2",
+        "easycorp/easyadmin-bundle": "^2.3",
+        "jms/serializer-bundle": "^3.5",
+        "knplabs/doctrine-behaviors": "^2.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
@@ -21,6 +25,7 @@
         "symfony/orm-pack": "*",
         "symfony/process": "5.0.*",
         "symfony/security-bundle": "5.0.*",
+        "symfony/serializer": "5.0.*",
         "symfony/serializer-pack": "*",
         "symfony/string": "5.0.*",
         "symfony/translation": "5.0.*",
